--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vite-template-redux",
+  "name": "Todo-app-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --output-path dist",
     "preview": "vite preview",
     "test": "vitest",
     "format": "prettier --write .",
